<resources>
    <string name="app_name">TodoApp</string>
    <string name="log_in">Log In</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="proceed"><![CDATA[Proceed >]]></string>
    <string name="or_log_in_with">Or Log In With</string>
    <string name="newbie">Newbie?</string>
    <string name="create_account">Create Account</string>
    <string name="welcome">Welcome!</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="email">Email</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_message">Enter the email and we will send a One Time Password on this email</string>
    <string name="reset_password">Reset password</string>
    <string name="send_instructions">Send Instructions</string>
    <string name="create_new_password">Create new password</string>
    <string name="reset_message">Your new password must be different from previous used passwords.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="ex_email">email@gmail.com</string>
    <string name="submit">Submit</string>
    <string name="get_otp">Get OTP</string>
    <string name="did_not_receive_the_otp">Did not receive the OTP?</string>
    <string name="resend">Resend</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="statistic">Statistic</string>
    <string name="create_a_task">Create a task</string>
    <string name="add_task_title">Add task title</string>
    <string name="describe_your_task">Describe your task</string>
    <string name="category">Category</string>
    <string name="work">Work</string>
    <string name="activities">Activities</string>
    <string name="habits">Habits</string>
    <string name="add_new_category">+ Add new category</string>
    <string name="set_priority">Set Priority</string>
    <string name="i_want_to_start_now">I want to start now</string>
    <string name="i_want_to_start_later">I want to start later</string>
    <string name="date">Date</string>
    <string name="choose_date">Choose date</string>
    <string name="start_time">Start Time</string>
    <string name="ex_time">17:00</string>
    <string name="end_time">End time</string>
    <string name="calculate_your_time">Calculate your time</string>
    <string name="or">or</string>
    <string name="time_tracker">Time tracker</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="next_step">Next step</string>
    <string name="create_task">Create Task</string>
    <string name="focus_on_your_task">Focus on your task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_tasks">My tasks</string>
    <string name="all">All</string>
    <string name="to_do">To Do</string>
    <string name="in_progress">In Progress</string>
    <string name="_60">60%</string>
    <string name="previous_tasks">Previous tasks</string>
    <string name="_00_01_29_06">00:01:29:06</string>
    <string name="_00_00_20_43">00:00:20:43</string>
    <string name="december_18">December 18</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="_3_tasks_today">3 tasks today</string>
    <string name="_7_00">7:00</string>
    <string name="activities_34">Activities - 34%</string>
    <string name="study_34">Study - 34%</string>
    <string name="work_55">Work - 55%</string>
    <string name="habits_34">Habits - 34%</string>
    <string name="other_34">Other - 34%</string>
    <string name="complete_tasks">Complete tasks</string>
    <string name="overview">Overview</string>
    <string name="_2_10">2/10</string>
</resources>