<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="50dp"
        app:strokeWidth="1dp"
        app:strokeColor="#e0e0e0"
        app:cardCornerRadius="10dp">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/back_icon"
            android:layout_gravity="center"/>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cvBack"
        android:layout_marginTop="20dp"
        android:text="@string/create_new_password"
        android:layout_marginStart="@dimen/margin_start"
        android:textStyle="bold"
        android:textSize="@dimen/big_text_size"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvOtpMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvResetPassword"
        android:layout_marginTop="15dp"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:text="@string/reset_message"
        android:textSize="17sp"
        android:textColor="@android:color/darker_gray"
        android:lineSpacingExtra="7dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        app:layout_constraintTop_toBottomOf="@+id/tvOtpMessage"
        app:boxStrokeColor="@color/light_purple_blue"
        app:hintTextColor="@color/light_purple_blue"
        app:endIconMode="password_toggle"
        app:endIconCheckable="false"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:helperText="Must be at least 8 characters."
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRePassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"
        app:boxStrokeColor="@color/light_purple_blue"
        app:hintTextColor="@color/light_purple_blue"
        app:endIconMode="password_toggle"
        app:endIconCheckable="false"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:helperText="Both passwords must match."
        android:hint="@string/confirm_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtRePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/tilRePassword"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/light_purple_blue"
        app:cornerRadius="10dp"
        android:text="@string/reset_password"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="@dimen/medium_text_size"/>

</androidx.constraintlayout.widget.ConstraintLayout>