<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="50dp"
        app:strokeWidth="1dp"
        app:strokeColor="#e0e0e0"
        app:cardCornerRadius="10dp">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/back_icon"
            android:layout_gravity="center"/>

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/ivPicForgotPassword"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/pic_forgotpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvBack" />

    <TextView
        android:id="@+id/tvResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivPicForgotPassword"
        android:layout_marginTop="20dp"
        android:text="@string/reset_password"
        android:layout_marginStart="@dimen/margin_start"
        android:textStyle="bold"
        android:textSize="@dimen/big_text_size"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvOtpMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvResetPassword"
        android:layout_marginTop="15dp"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:text="@string/otp_message"
        android:textSize="17sp"
        android:textColor="@android:color/darker_gray"
        android:lineSpacingExtra="7dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        app:layout_constraintTop_toBottomOf="@+id/tvOtpMessage"
        app:boxStrokeColor="@color/light_purple_blue"
        app:hintTextColor="@color/light_purple_blue"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        android:hint="@string/enter_your_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGetOtp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_start"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/light_purple_blue"
        app:cornerRadius="10dp"
        android:text="@string/get_otp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="@dimen/medium_text_size"/>

</androidx.constraintlayout.widget.ConstraintLayout>