<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTaskContinueActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/margin_start_2"
                    android:layout_marginTop="@dimen/margin_start"
                    app:tint="@color/light_purple_blue"
                    android:src="@drawable/ic_back"/>

                <TextView
                    android:id="@+id/tvCreateTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="@dimen/margin_start"
                    android:text="@string/create_a_task"
                    android:gravity="center"
                    android:textSize="@dimen/big_text_size"
                    android:textColor="@color/dark_blue_2"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="@dimen/margin_start_2"
                android:layout_marginEnd="@dimen/margin_start_2"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioNow"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/i_want_to_start_now"
                    android:textColor="@color/dark_blue_2"
                    android:textSize="@dimen/medium_text_size"/>

                <RadioButton
                    android:id="@+id/radioLater"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/i_want_to_start_later"
                    android:textColor="@color/dark_blue_2"
                    android:textSize="@dimen/medium_text_size"/>

            </RadioGroup>

            <TextView
                android:id="@+id/tvDateTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_start_2"
                android:layout_marginStart="@dimen/margin_start"
                android:text="@string/date"
                android:textColor="@color/dark_blue_2"
                android:textSize="@dimen/medium_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvDate"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_2"
                    app:strokeWidth="1dp"
                    app:strokeColor="@color/light_purple_blue"
                    app:cardCornerRadius="15dp">

                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_start_2"
                        android:layout_marginBottom="@dimen/margin_start_2"
                        android:layout_marginStart="@dimen/margin_start_2"
                        android:layout_marginEnd="@dimen/margin_start_2"
                        android:hint="@string/choose_date"
                        android:textSize="@dimen/medium_text_size"/>

                </com.google.android.material.card.MaterialCardView>

                <ImageView
                    android:id="@+id/ivDate"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_calendar"
                    android:layout_marginStart="@dimen/margin_start_2"
                    app:tint="@color/light_blue"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvStartTimeTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_start_2"
                        android:layout_marginStart="@dimen/margin_start"
                        android:text="@string/start_time"
                        android:textColor="@color/dark_blue_2"
                        android:textSize="@dimen/medium_text_size" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilStartTimeTitle"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="@dimen/margin_start_2"
                        android:layout_marginEnd="@dimen/margin_start_2"
                        app:boxStrokeColor="@color/light_purple_blue"
                        app:hintTextColor="@color/light_purple_blue"
                        app:hintEnabled="false"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtStartTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/ex_time"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvEndTimeTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_start_2"
                        android:layout_marginStart="@dimen/margin_start"
                        android:text="@string/end_time"
                        android:textColor="@color/dark_blue_2"
                        android:textSize="@dimen/medium_text_size" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilEndTimeTitle"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="@dimen/margin_start_2"
                        android:layout_marginEnd="@dimen/margin_start_2"
                        app:boxStrokeColor="@color/light_purple_blue"
                        app:hintTextColor="@color/light_purple_blue"
                        app:hintEnabled="false"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtEndTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/ex_time"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvCalculate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_start"
                        android:gravity="center"
                        android:text="@string/calculate_your_time"
                        android:textColor="@color/dark_blue_2"
                        android:textSize="@dimen/medium_text_size" />

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cvCalculate"
                        android:layout_width="170dp"
                        android:layout_height="130dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="@dimen/margin_start_2"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="@dimen/margin_start"
                        app:cardCornerRadius="25dp"
                        app:cardElevation="15dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginTop="@dimen/margin_start_2"
                                android:src="@drawable/ic_timer"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:tint="@color/blue" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/time_tracker"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                android:layout_marginBottom="@dimen/margin_start"
                                android:textSize="@dimen/medium_text_size"
                                android:textColor="@color/blue"/>

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_start"
                    android:text="@string/or"
                    android:textSize="@dimen/medium_text_size"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvFocus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_start"
                        android:gravity="center"
                        android:text="@string/focus_on_your_task"
                        android:textColor="@color/dark_blue_2"
                        android:textSize="@dimen/medium_text_size" />

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cvFocus"
                        android:layout_width="170dp"
                        android:layout_height="130dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="@dimen/margin_start_2"
                        android:layout_marginEnd="@dimen/margin_start_2"
                        android:layout_marginBottom="@dimen/margin_start"
                        app:cardCornerRadius="25dp"
                        app:cardElevation="15dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:layout_marginTop="@dimen/margin_start_2"
                                android:src="@drawable/ic_clock"
                                app:tint="@color/orange" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pomodoro"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                android:layout_marginBottom="@dimen/margin_start"
                                android:textSize="@dimen/medium_text_size"
                                android:textColor="@color/orange"/>

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCreateTask"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginStart="@dimen/margin_start_2"
                android:layout_marginEnd="@dimen/margin_start_2"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="@dimen/margin_start"
                android:backgroundTint="@color/light_purple_blue"
                app:cornerRadius="30dp"
                android:text="@string/create_task"
                android:textAllCaps="false"
                android:textSize="@dimen/medium_text_size"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>